tests/module_system_declaration_dirnames/module_system_declaration_dirnames.exp
Error ------------------------------------------------------------------------------------------------------ test.js:2:1

Cannot cast `foo` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:2:1
   2| foo as empty; // error: string ~> empty
      ^^^

References:
   decl1/foo.js.flow:1:24
   1| declare export default string;
                             ^^^^^^ [1]
   test.js:2:8
   2| foo as empty; // error: string ~> empty
             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:3:17

Cannot resolve module `bar`. [cannot-resolve-module]

   3| import bar from 'bar'; // error: @flowtyped is not special when module.declaration_dirnames is explicitly set
                      ^^^^^


Error ------------------------------------------------------------------------------------------------------ test.js:5:1

Cannot cast `baz` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:5:1
   5| baz as empty; // error: string ~> empty
      ^^^

References:
   decl2/baz.js.flow:1:24
   1| declare export default string;
                             ^^^^^^ [1]
   test.js:5:8
   5| baz as empty; // error: string ~> empty
             ^^^^^ [2]



Found 3 errors
